# python-project-lvl3

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  python-check.yml  tests.yml
page_loader/: __init__.py  engine.py  page_loader.py
page_loader/scripts/: loader.py
tests/: test_page_loader.py
tests/fixtures/: resources.html  resources_result.html  test.html  test_result.html
