[tool.poetry]
name = "loader"
version = "0.1.0"
description = ""
authors = ["ivan klimentev <klimentievis@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
